--- a/SimpleToDo/res/layout/activity_edit_to_do.xml
+++ b/SimpleToDo/res/layout/activity_edit_to_do.xml
@@ -5,50 +5,84 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-      <EditText
-        android:id="@+id/name"
+    <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="Name" >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/name"
-        android:layout_below="@+id/name"
-        android:layout_marginTop="34dp"
-        android:ems="10"
-        android:hint="Description"
-        android:inputType="textMultiLine"
-        android:minLines="7" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:text="Edit Item Below"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffffff" />
 
     <Button
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/description"
-        android:layout_marginRight="34dp"
-        android:layout_marginTop="26dp"
-        android:layout_toLeftOf="@+id/delete"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="46dp"
         android:onClick="saveItem"
         android:text="Save" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="25dp"
+        android:text="Title"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#ffffff" />
+
+    <EditText
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/save"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="44dp"
+        android:background="#ffffff"
+        android:ems="10"
+        android:gravity="center_vertical|top"
+        android:hint="Description"
+        android:inputType="textMultiLine"
+        android:minLines="7"
+        android:textColor="#000000" />
+
+    <EditText
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/description"
+        android:layout_below="@+id/textView2"
+        android:background="#ffffff"
+        android:ems="10"
+        android:hint="Name"
+        android:textColor="#000000" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/description"
+        android:layout_alignLeft="@+id/textView2"
+        android:text="Description"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#ffffff" />
 
     <Button
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/save"
-        android:layout_alignBottom="@+id/save"
         android:layout_alignRight="@+id/description"
+        android:layout_below="@+id/description"
         android:onClick="deleteItem"
         android:text="Delete" />
 
